test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/test_attr.sw
library;

#[test(should_revert)]
fn ok() { }

#[test(should_rvert)]
#[test(unknown_arg)]
fn not_ok() { }